// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots TreeSelect Ellipsis 1`] = `
<div
  className="css-11uro89-CheckboxContainer-tableInputContainerCSS e1mpj03z1"
  data-cy="tree-select-options"
>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-14"
      id="checkbox-14-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-14-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-14"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        All
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-15"
      id="checkbox-15-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-15-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-15"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Shapes
      </span>
    </label>
  </div>
  <div
    className="css-1vxco1u-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-16"
      id="checkbox-16-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-16-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-16"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        rectangle
      </span>
    </label>
  </div>
  <div
    className="css-1vxco1u-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-17"
      id="checkbox-17-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-17-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-17"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        circle
      </span>
    </label>
  </div>
  <div
    className="css-1vxco1u-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-18"
      id="checkbox-18-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-18-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-18"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        rhombus
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-19"
      id="checkbox-19-label"
    >
      <input
        aria-checked={true}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-19-label"
        checked={true}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-19"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-njm8mk"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Pass
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-20"
      id="checkbox-20-label"
    >
      <input
        aria-checked={true}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-20-label"
        checked={true}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-20"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-njm8mk"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        REALLY LONG TITLE EXAMPLE EXAMPLE EXAMPLE EXAMPLE EXAMPLE!!!!!!!!!!!!!!!!!
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-21"
      id="checkbox-21-label"
    >
      <input
        aria-checked={true}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-21-label"
        checked={true}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-21"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-njm8mk"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Skip
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-22"
      id="checkbox-22-label"
    >
      <input
        aria-checked={true}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-22-label"
        checked={true}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-22"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-njm8mk"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Silent Fail
      </span>
    </label>
  </div>
</div>
`;

exports[`storybook Storyshots TreeSelect No Dropdown 1`] = `
<div
  className="css-11uro89-CheckboxContainer-tableInputContainerCSS e1mpj03z1"
  data-cy="tree-select-options"
>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-23"
      id="checkbox-23-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-23-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-23"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Shapes
      </span>
    </label>
  </div>
  <div
    className="css-1vxco1u-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-24"
      id="checkbox-24-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-24-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-24"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        rectangle
      </span>
    </label>
  </div>
  <div
    className="css-1vxco1u-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-25"
      id="checkbox-25-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-25-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-25"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        circle
      </span>
    </label>
  </div>
  <div
    className="css-1vxco1u-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-26"
      id="checkbox-26-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-26-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-26"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        rhombus
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-27"
      id="checkbox-27-label"
    >
      <input
        aria-checked={true}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-27-label"
        checked={true}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-27"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-njm8mk"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Pass
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-28"
      id="checkbox-28-label"
    >
      <input
        aria-checked={true}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-28-label"
        checked={true}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-28"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-njm8mk"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Failed
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-29"
      id="checkbox-29-label"
    >
      <input
        aria-checked={true}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-29-label"
        checked={true}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-29"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-njm8mk"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Skip
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-30"
      id="checkbox-30-label"
    >
      <input
        aria-checked={true}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-30-label"
        checked={true}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-30"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-njm8mk"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Silent Fail
      </span>
    </label>
  </div>
</div>
`;

exports[`storybook Storyshots TreeSelect No Initial Values 1`] = `
<div
  className="css-11uro89-CheckboxContainer-tableInputContainerCSS e1mpj03z1"
  data-cy="tree-select-options"
>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-5"
      id="checkbox-5-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-5-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-5"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        All
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-6"
      id="checkbox-6-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-6-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-6"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Shapes
      </span>
    </label>
  </div>
  <div
    className="css-1vxco1u-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-7"
      id="checkbox-7-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-7-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-7"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        rectangle
      </span>
    </label>
  </div>
  <div
    className="css-1vxco1u-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-8"
      id="checkbox-8-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-8-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-8"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        circle
      </span>
    </label>
  </div>
  <div
    className="css-1vxco1u-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-9"
      id="checkbox-9-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-9-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-9"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        rhombus
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-10"
      id="checkbox-10-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-10-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-10"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Pass
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-11"
      id="checkbox-11-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-11-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-11"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        REALLY LONG TITLE EXAMPLE EXAMPLE EXAMPLE EXAMPLE EXAMPLE!!!!!!!!!!!!!!!!!
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-12"
      id="checkbox-12-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-12-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-12"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Skip
      </span>
    </label>
  </div>
  <div
    className="css-1el7anf-getCheckboxWrapper e1mpj03z3"
  >
    <label
      className="leafygreen-ui-hfnsvs cy-checkbox"
      htmlFor="checkbox-13"
      id="checkbox-13-label"
    >
      <input
        aria-checked={false}
        aria-disabled={false}
        aria-label="checkbox"
        aria-labelledby="checkbox-13-label"
        checked={false}
        className="leafygreen-ui-3bropy"
        data-cy="checkbox"
        disabled={false}
        id="checkbox-13"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="leafygreen-ui-cho4qd"
        data-leafygreen-ui="checkbox-wrapper"
      >
        <div
          className="leafygreen-ui-v3mbc2"
        />
      </div>
      <span
        className="leafygreen-ui-1qufm80"
      >
        Silent Fail
      </span>
    </label>
  </div>
</div>
`;
